--- a/Js/JS III - DOM/Obtendo elementos HTML do DOM/index.html
+++ b/Js/JS III - DOM/Obtendo elementos HTML do DOM/index.html
@@ -43,6 +43,6 @@
       <button onclick="show()">Exibir</button>
     </ul>
 
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
